--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </section>
             <div class="image-overlay">
                 <div class="demos">12 DEMOS</div>
-                <img src="profile.jpg" alt="James Smith">
+                <img src="profilephoto.png" alt="Photo Gonçalo">
             </div>
         </main>
     </div>
