--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
                 <p class="role">A Passionate <span>Software Developer_</span></p>
                 <button class="say-hello">Say Hello</button>
             </section>
+            <svg class="blob" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                <path fill="#ff6b6b" d="M50,10 C90,-20 110,50 90,90 C70,130 20,120 10,80 C0,40 10,20 50,10"></path>
+            </svg>
             <div class="image-overlay">
                 <div class="demos">12 DEMOS</div>
-                <img src="profilephoto.png" alt="Photo Gonçalo">
+                <img src="profilephoto.jpg" alt="Photo Gonçalo">
             </div>
         </main>
     </div>
