--- a/index.html
+++ b/index.html
@@ -1,26 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
 <body>
     <div class="container">
         <aside class="sidebar">
-            <div class="logo">Thames</div>
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Works</a></li>
-                    <li><a href="#">Service</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Blog</a></li>
-                </ul>
-            </nav>
-            <button class="download-cv">Download CV</button>
+            <div class="sidebar-up center-content">
+                <div class="logo"> Portfolio</div> 
+            </div>
+            <div class="sidebar-middle center-content">
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Works</a></li>
+                        <li><a href="#">Service</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Blog</a></li>
+                    </ul>
+                </nav>
+            </div> 
+            <div class="sidebar-down center-content">
+                <button class="download-cv">Download CV</button>
+            </div>  
         </aside>
         <main class="content">
             <section class="intro">
@@ -29,9 +27,9 @@
                 <p class="role">A Passionate <span>Software Developer_</span></p>
             </section>
             <div class="image-overlay">
-                <img src="profilephoto.jpg" alt="Photo Gonçalo">
+                <img src="profilephoto.png" alt="Photo Gonçalo">
             </div>
         </main>
     </div>
+
 </body>
-</html>
