--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer=""></script>
 </head>
 <body>
     <div class="container">
@@ -29,15 +28,14 @@
             </div>  
         </aside>
         <main class="content">
-            <section class="intro">
+            <section class="intro-left">
                 <p class="greeting">HELLO, I’M</p>
                 <h1>Gonçalo Pardal</h1>
                 <p class="role">A Passionate <span>Software Developer_</span></p>
             </section>
-            <div class="image-overlay">
-                <img src="profilephoto.png" alt="Photo Gonçalo">
-            </div>
+            <section class="intro-right"><div class="image-background"> 
+    <img src="profilephoto.png" alt="Photo Gonçalo"></div></section>
         </main>
     </div>
-</body>
-</html>
+
+</body></html>
