--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                 <h1>Gonçalo Pardal</h1>
                 <p class="role">A Passionate <span>Software Developer_</span></p>
             </section>
+            <div id="gradient-color"></div>
+<div id="blob"></div>
+<div id="blur"></div>
             <section class="intro-right"><div class="image-background"> 
     <img src="profilephoto.png" alt="Photo Gonçalo"></div></section>
         </main>
