--- a/index.html
+++ b/index.html
@@ -31,11 +31,16 @@
             <section class="intro-left">
                 <p class="greeting">HELLO, I’M</p>
                 <h1>Gonçalo Pardal</h1>
-                <p class="role">A Passionate <span>Software Developer_</span></p>
+                <p class="role">A Passionate <span>Software Developer</span><span class="flicker-animation">_</span></p>
             </section>
-            <section class="intro-right"><div class="image-background"> 
-    <img src="profilephoto.png" alt="Photo Gonçalo"></div></section>
-        </main>
+            <section class="intro-right">
+    <div class="intro-right-overlay">
+    <div class="image-overlay"><img src="profilephoto.png" alt="Photo Gonçalo" width="90%"></div>
+    <div class="image-background"></div>
+    </div>
+</section>
+            
+<div class="bottom-bar">Copyright © Gonçalo Pardal <span id="year"></span></div></main>
     </div>
 
 </body></html>
