--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
                     <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
-                        <li><a href="#">Works</a></li>
-                        <li><a href="#">Service</a></li>
+                        <li><a href="#">Projects</a></li>
+                        <li><a href="#">Experience</a></li>
                         <li><a href="#">Contact</a></li>
-                        <li><a href="#">Blog</a></li>
+                        
                     </ul>
                 </nav>
             </div> 
             <div class="sidebar-down center-content">
-                <button class="download-cv">Download CV</button>
+                <a href="" class="download-cv" download="">Download CV</a>
             </div>  
         </aside>
         <main class="content">
             <section class="intro-left">
-                <p class="greeting">HELLO, I’M</p>
+                <p class="greeting">HELLO, I'M</p>
                 <h1>Gonçalo Pardal</h1>
                 <p class="role">A Passionate <span>Software Developer</span><span class="flicker-animation">_</span></p>
             </section>
@@ -40,7 +40,7 @@
     </div>
 </section>
             
-<div class="bottom-bar">Copyright © Gonçalo Pardal <span id="year"></span></div></main>
+<div class="bottom-bar">Copyright © Gonçalo Pardal <span id="year">2025</span></div></main>
     </div>
 
 </body></html>
