--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </nav>
             </div> 
             <div class="sidebar-down center-content">
-                <a href="" class="download-cv" download="">Download CV</a>
+                <a id= "cv-button" href="" class="download-cv" download="">Download CV</a>
             </div>  
         </aside>
         <main class="content">
