--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
                         <li><a href="#">Projects</a></li>
                         <li><a href="#">Experience</a></li>
                         <li><a href="#">Contact</a></li>
-                        
-                    </ul>
+                        <li><a href="loadLanguages()">EN / PT</a></li></ul>
                 </nav>
             </div> 
             <div class="sidebar-down center-content">
-                <a id= "cv-button" href="" class="download-cv" download="">Download CV</a>
+                <a id="cv-button" href="CurriculumGP_EN.pdf" class="download-cv" download="">Download CV</a>
             </div>  
         </aside>
         <main class="content">
