--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <li><a href="#">Projects</a></li>
                         <li><a href="#">Experience</a></li>
                         <li><a href="#">Contact</a></li>
-                        <li><a onclick="script.js/loadLanguages()">EN / PT</a></li></ul>
+                        <li><a onclick="loadLanguages()">EN / PT</a></li></ul>
                 </nav>
             </div> 
             <div class="sidebar-down center-content">
