--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <li><a href="#">Projects</a></li>
                         <li><a href="#">Experience</a></li>
                         <li><a href="#">Contact</a></li>
-                        <li><a onclick="loadLanguages()">EN / PT</a></li></ul>
+                        <li><a onclick="changeLanguage()">EN / PT</a></li></ul>
                 </nav>
             </div> 
             <div class="sidebar-down center-content">
@@ -28,7 +28,7 @@
         </aside>
         <main class="content">
             <section class="intro-left">
-                <p class="greeting">HELLO, I'M</p>
+                <p id="greeting" class="greeting">HELLO, I'M</p>
                 <h1>Gonçalo Pardal</h1>
                 <p class="role">A Passionate <span>Software Developer</span><span class="flicker-animation">_</span></p>
             </section>
