--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
             <div class="sidebar-middle center-content">
                 <nav>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Projects</a></li>
-                        <li><a href="#">Experience</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a id="home" href="#">Home</a></li>
+                        <li><a id="about" href="#">About</a></li>
+                        <li><a id="projects&quot;" href="#">Projects</a></li>
+                        <li><a id="experience" href="#">Experience</a></li>
+                        <li><a id="contact" href="#">Contact</a></li>
                         <li><a onclick="changeLanguage()">EN / PT</a></li></ul>
                 </nav>
             </div> 
             <div class="sidebar-down center-content">
-                <a id="cv-button" href="CurriculumGP_EN.pdf" class="download-cv" download="">Download CV</a>
+                <a id="cv-button" href="CurriculoGP_PT.pdf" class="download-cv" download="">Download CV</a>
             </div>  
         </aside>
         <main class="content">
             <section class="intro-left">
-                <p id="greeting" class="greeting">HELLO, I'M</p>
+                <p id="greeting" class="greeting">OLA, EU SOU O</p>
                 <h1>Gonçalo Pardal</h1>
-                <p class="role">A Passionate <span>Software Developer</span><span class="flicker-animation">_</span></p>
+                <p class="role"><span id="description">A Passionate </span><span class="primary-color">Software Developer</span><span class="flicker-animation primary-color">_</span></p>
             </section>
             <section class="intro-right">
     <div class="intro-right-overlay">
