--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <ul>
                         <li><a id="home" href="#">Home</a></li>
                         <li><a id="about" href="#">About</a></li>
-                        <li><a id="projects&quot;" href="#">Projects</a></li>
+                        <li><a id="projects" href="#">Projects</a></li>
                         <li><a id="experience" href="#">Experience</a></li>
                         <li><a id="contact" href="#">Contact</a></li>
                         <li><a onclick="changeLanguage()">EN / PT</a></li></ul>
