--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
             <section class="intro-left">
                 <p id="greeting" class="greeting">OLA, EU SOU O</p>
                 <h1>Gonçalo Pardal</h1>
-                <p class="role"><span id="description">A Passionate </span><span class="primary-color">Software Developer</span><span class="flicker-animation primary-color">_</span></p>
+                <p class="role">
+                    <span id="description">A Passionate </span>
+                    <span class="primary-color">Software Developer</span>
+                    <span class="flicker-animation primary-color">_</span></p>
             </section>
             <section class="intro-right">
     <div class="intro-right-overlay">
