--- a/index.html
+++ b/index.html
@@ -23,25 +23,28 @@
                         <li><a href="#projects" id="link-projects">Projects</a></li>
                         <li><a href="#experience" id="link-experience">Experience</a></li>
                         <li><a href="#contact" id="link-contact">Contact</a></li>
-                        <li><a onclick="changeLanguage()">EN / PT</a></li>
+                        <li><a class="link-language" onclick="changeLanguage()">EN / PT</a></li>
                     </ul>
                 </nav>
             </div>
 
             <div class="sidebar-down center-content">
-                <a id="cv-button" href="CurriculoGP_PT.pdf" class="download-cv" download="">Download CV</a>
+                <a id="cv-button" href="CurriculumGP_EN.pdf" class="download-cv" download="">Download CV</a>
             </div>
         </aside>
         <!-- Main Content -->
         <main class="content">
             <!-- Home Section -->
             <section id="home" class="active"> 
-                <div class="intro-left center-content"><p id="greeting" class="greeting">HELLO, I'M</p>
-                <h1>Gonçalo Pardal</h1>
-                <p class="role">
-                    <span id="description">A Passionate </span>
-                    <span class="primary-color">Software Developer</span>
-                    <span class="flicker-animation primary-color">_</span></p></div> 
+                <div class="intro-left center-content">
+                    <p id="greeting" class="greeting">HELLO, I'M</p>
+                    <h1>Gonçalo Pardal</h1>
+                    <p class="role">
+                        <span id="description">A Passionate </span>
+                        <span id="work-role" class="primary-color">Software Developer</span>
+                        <span class="flicker-animation primary-color">_</span>
+                    </p>
+                </div>  
                 <div class="intro-right">
                     <div class="image-overlay">
                         <img src="profilephoto.png" alt="Photo Gonçalo" width="90%">
@@ -52,10 +55,10 @@
 
 
             <!-- About Section -->
-            <section id="about">Sobre</section>
+            <section id="about" class="">Sobre</section>
 
             <!-- Projects Section -->
-            <section id="projects">Projetos</section>
+            <section id="projects" class="">Projetos</section>
 
             <!-- Experience Section -->
             <section id="experience">Experiência</section>
