--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             <!-- Contact Section -->
         <section id="contact">
             <a href="https://github.com/gfpardal"><i class="fab fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/goncalo-pardal"><i class="fab fa-linkedin"></i></a>
-            <a href="https://www.instagram.com/_gpardal_/"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/gonçalo-pardal"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/_gpardal_"><i class="fab fa-instagram"></i></a>
             <a href="mailto:goncalopardaleco@gmail.com"><i class="fas fa-envelope"></i></a>
         </section>
             
