--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 <a id="cv-button" href="CurriculumGP_EN.pdf" class="download-cv" download="">Download CV</a></div>
 
             <div class="sidebar-down center-content">
-              <nav class="icon-links">
-            <a href="https://github.com/gfpardal"><i class="fab fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/gonçalo-pardal"><i class="fab fa-linkedin"></i></a>
-            <a href="https://www.outsystems.com/profile/kbg7asyc7z/overview"><i class="fas fa-circle outer"><i class="fas fa-circle inner"></i></i></a>
-            <a href="mailto:goncalopardaleco@gmail.com"><i class="fas fa-envelope"></i></a>
-        </nav>  
+                <div class="icon-links">
+                    <a href="https://github.com/gfpardal"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/gonçalo-pardal"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.outsystems.com/profile/kbg7asyc7z/overview"><i class="fas fa-circle outer"><i class="fas fa-circle inner"></i></i></a>
+                    <a href="mailto:goncalopardaleco@gmail.com"><i class="fas fa-envelope"></i></a>
+                </div>  
             </div>
         </aside>
         <!-- Main Content -->
