--- a/index.html
+++ b/index.html
@@ -64,13 +64,14 @@
 
 
             <!-- About Section -->
-            <section id="about" class="">Sobre</section>
-
+            <section id="about" class="">About</section>
+                <span>I approach every challenge with determination and perseverance, always striving for excellence in my work. Helping others is something I deeply value, guided by a strong sense of empathy and collaboration. My passion for programming has been a driving force in my career, and recently, I have developed a keen interest in OutSystems. This continuous learning mindset reflects my commitment to growth and innovation in the technology field</span>
+                <span class="flicker-animation primary-color">_</span>
             <!-- Projects Section -->
-            <section id="projects" class="">Projetos</section>
+            <section id="projects" class="">Projects</section>
 
             <!-- Experience Section -->
-            <section id="experience" class="">Experiência</section>
+            <section id="experience" class="">Experience</section>
 
             
         
